Fixed: Slider and header image text being a little bit too small and not visible enough

--- a/site-sass/brennan/slider-styling.scss
+++ b/site-sass/brennan/slider-styling.scss
@@ -141,6 +141,10 @@ li.slick-active button{
     color: #fff !important;
   }
 
+  .brighter > a {
+    font-size: 20px;
+  }
+
 }
 
 @include mq($until: tablet) {
